Added VScrollbarWindow class     -> It's a scrollbar with a line above and below     -> The "bar" isn't a bar, it's a square     -> Fits with sbgui's overall light design
-> Further improved performance while images are on screen

	modified:   include/res/sbwnd_res.h
	modified:   include/sbwnd/sbwnd_create.h
	modified:   include/sbwnd/sbwnd_general.h
	modified:   include/sbwnd/sbwnd_proc.h
	modified:   res/sbwnd_res.rc
	modified:   src/main/saucebot.c
	modified:   src/sbwnd/sbwnd_create.c
	modified:   src/sbwnd/sbwnd_general.c
	modified:   src/sbwnd/sbwnd_init.c
	modified:   src/sbwnd/sbwnd_proc.c

--- a/res/sbwnd_res.rc
+++ b/res/sbwnd_res.rc
@@ -6,6 +6,7 @@ LGSB_ICO    ICON    "lgsb.ico"
 TBL_ONE ACCELERATORS {
     0x08,   LARGE_BACK, VIRTKEY, CONTROL
     "^V",   PASTE
+    "^C",   COPY
 }
 
 MENU_ONE MENU {
